2003-07-25  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :

	  - now query_generate() and compute_generate() will work anytime
	    after kb is closed.

	* lib/kb.cpp :
	* lib/kb.h :
	* lib/smwrap.cpp :
	* lib/smwrap.h :

	  - Changed the way atoms are queried against the stable models.
	    Previously, each atom in an expression is checked against every
	    single model until we find a false atom or check all the models.
	    Now, models are generated under the assertion that the atom we
	    are checking is NOT in the model. So if no model is generated,
	    we can conclude that the atom is consistently in all models and is
	    therefore true. If at least one model is found, we conclude that
	    the atom is inconsistent so it is false.

2003-07-16  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :
	* lib/kb.h :

	  - Added static negate_atom() function.

	  - Make compute_atom() static.

	* lib/smwrap.cpp :
	* lib/smwrap.h :

	  - Fix so that the smwrap::ask() will now try to evaluate atoms
	    consistently in one model at a time. Previously, it was possible
	    for atoms of one expression to be evaluated in different models.

2003-07-08  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :
	* lib/kb.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Added symtab_get_array().

	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Added strlist_get().

2003-06-25  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :
	* lib/kb.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Added functions to retrieve symtab identifiers.

	* lib/kb.cpp :
	* lib/kb.h :
	* lib/transtab.cpp :
	* lib/transtab.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Added a get() and length() function wrappers for seqtab and
	    transtab.

	* lib/kb.cpp :
	* lib/kb.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/wrapper.cpp :

	  - Added a kb_check_symtab() to see if an identifier is in the symbol
	    table.
